2005-04-21  Stuart Caie   <kyzer@4u.net>

	* src/cabinfo.c: This now prints if the NAME_IS_UTF flag is set for
	each file.

2004-10-19  Stuart Caie   <kyzer@4u.net>

	* create_output_name(): fixed out-by-one error in UTF-8 decoder. All
	UTF-8 filenames would reach the "error in UTF-8 decode" section,
	because the test for that section was "pointer >= last_character",
	not "pointer > last_character".

2004-10-18  Stuart Caie   <kyzer@4u.net>

	* process_cabinet(): now accepts that failure of create_output_name()
	is an error, and also lets that function print an error message
	rather than printing one itself.

	* create_output_name(): improved the two error messages that could
	be printed.

2004-10-15  Stuart Caie   <kyzer@4u.net>

	* create_output_name(): removes leading "./" and "../" as well as
	leading slashes from the input filename. Thanks to David Banz for
	pointing this out, as well as http://www.securityfocus.com/bid/11376/
	
2004-07-16  Stuart Caie   <kyzer@4u.net>

	* Makefile.am: added -DMSPACK_NO_DEFAULT_SYSTEM. Why wasn't this in
	earlier?

	* src/cabextract.c: added prototypes of the cabx_ functions,
	removed the prototype of cabextract_system and moved the real
	cabextract_system to before main(). This is so AIX doesn't fail on
	seeing an extern and a static definition of the same
	global. That's messed up!

	* alloca.c, fnmatch*, getopt*, mempcpy.c: imported these from
	gcc's latest libiberty. This should fix problems with Cygwin.
	
2004-03-18  Stuart Caie   <kyzer@4u.net>

	* process_cabinet(): added missing printf argument when errors on
	extracting to stdout occur. Thanks to Moritz Barsnick for finding
	it.

2004-03-08  Stuart Caie   <kyzer@4u.net>

	* all: tidy-ups for 1.0 release
	
2003-09-04  Stuart Caie   <kyzer@4u.net>

	* set_date_and_perm(): implemented the utimes() alternative to
	utime().

	* set_date_and_perm(): sets the date before the permissions are set,
	in case read-only files really do get -r--r--r-- permissions and